# engineering-template

./: README.md  TODO.md  pyproject.toml
notebooks/: 00_context.ipynb  00_engineering_context.ipynb  README.md
src/benefits_distribution/: __init__.py  figures.py  validation.py
src/engineering_template/: __init__.py  export.py  figures.py  paths.py  render.py  validation.py
