[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-template"
version = "0.1.0"
description = "Reusable infrastructure for engineering specification notebooks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=2.0",
  "matplotlib>=3.9"
]

[tool.setuptools.packages.find]
where = ["src"]
